@@ -1,6 +1,6 @@
 ;; -*- coding: utf-8; mode: scheme -*-
 ;;
-;; $Id: proj.conf.in,v 1.2 2006/07/28 13:09:38 bizenn Exp $
+;; $Id:$
 
 (make <kahua-config>
   :sockbase             "unix:###%%_PROJECT_NAME_UP_%%_INPLACE_SOCKETBASE###"
