@@ -1,5 +1,5 @@
 /* style sheet for %%_PROJECT_NAME_%% */
-/* $Id: proj.css,v 1.1.2.2 2006/07/16 16:16:55 cut-sea Exp $ */
+/* $Id:$ */
 
 /*
  * Common stuff
