@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2005 KahuaOrg
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: version.kahua.in,v 1.3 2006/08/13 07:18:48 cut-sea Exp $
+;; $Id:$
 
 ;;---------------------------------------------------------
 (define *%%_PROJECT_NAME_%%-version* "###%%_PROJECT_NAME_UP_%%_VERSION###")
