@@ -4,7 +4,7 @@
 ;;  See COPYING for terms and conditions of using this software
 ;;
 ;; test configuration file
-;; $Id: test.conf.in,v 1.1 2006/12/25 18:34:01 cut-sea Exp $
+;; $Id:$
 
 (make <kahua-config>
   :sockbase "unix:##TEST_DIR##/test/_tmp"
